prevent horizontal scroll on front page #2

--- a/includes/assets/css/front-page.less
+++ b/includes/assets/css/front-page.less
@@ -380,7 +380,7 @@
 						box-shadow: 0 0 0 2px @gray_border;
 						border-radius: 50%;
 
-						@media all and ( min-width: 992px ) {
+						@media all and ( min-width: 1240px ) {
 							display: block;
 						}
 					}
